# emotion-analytics-platform

./: .azuremlignore  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cleanup_encoders.sh  config.json  docker-compose.build.yml  docker-compose.yml  pyproject.toml  start-build.bat  start-production.bat
.github/workflows/: codecov.yml  docker-image.yml  lint.yaml  sphinx-docs.yml  test.yaml
airflow/dags/: inference_preprocessing_job.py  preprocessing_job.py
data/processed/: test.csv  train.csv
docs/: Documentation.md  MONITORING_README.md  conf.py  index.rst  introduction.rst  linting.md
docs/_autosummary/: emotion_clf_pipeline.data.rst  emotion_clf_pipeline.model.rst  emotion_clf_pipeline.predict.rst  emotion_clf_pipeline.rst  emotion_clf_pipeline.train.rst
docs/_static/: .gitkeep
docs/api/: emotion_clf_pipeline.rst  modules.rst
environment/: environment.yml
frontend/: .dockerignore  .env  .env.example  .npmrc  Dockerfile  GEMINI_FIX_GUIDE.md  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  VideoContext.js  api.js  index.css  index.js  theme.js  utils.js
models/: baseline_stats.pkl
models/encoders/: intensity_encoder.pkl
models/evaluation/: evaluation.csv  metrics.json  registration_status.json
models/hpt/: emotion-clf-hpt.db
models/test_encoders/: intensity_encoder.pkl
models/weights/: baseline_weights.pt  model_config.json  sync_status.json
notebooks/: Pipeline_normal.ipynb  Testing frontend and deployment.ipynb  azure_endpoint.ipynb  azure_setup_test.ipynb  s3_register_environment.ipynb  s3_upload_cleaned_data copy.ipynb  s3_upload_cleaned_data.ipynb
results/evaluation/: azure_sync_status.json  evaluation_report.csv  registration_status.json  training_metrics.json
results/monitoring/: api_metrics.json  daily_summary.json  drift_detection.json  error_tracking.json  model_performance.json  prediction_logs.json  system_metrics.json
results/predictions/: 12 New AI Projects using Raspberry-Pi, Jetson Nano & more.xlsx  Ancient Wisdom Proven Right by Science!.xlsx  Camping in an Abandoned WWII Army Base in Remote Alaskan Rainforest.xlsx  Computational lithography_ Driving nanometer precision in microchip manufacturing _ ASML.xlsx  Computer Engineering & the End of Moore's Law_ Crash Course Engineering #35.xlsx  Cute, but powerful_ meet NanoCluster, a tiny supercomputer.xlsx  How Engineering Robots Works_ Crash Course Engineering #33.xlsx  (+12 more)
tests/: test_comprehensive_coverage.py  test_data.py  test_extreme_coverage.py  test_features.py  test_massive_coverage.py  test_model.py  test_monitoring.py  test_simple_coverage.py  test_stt.py  test_transcript.py  test_ultra_coverage.py
(+103 files in other folders)
