[project]
name = "emotion-clf-pipeline"
version = "0.1.0"
description = "This project aims to develop an NLP pipeline that processes video or audio, transcribes it, and classifies the emotion. The pipeline will be deployed on Azure using MLOps principles to enable automated workflows, cloud deployment, and robust monitoring."
authors = [
    {name = "Soheil Mohammadpour", email = "231754@buas.nl"},
    {name = "Erfan Salour", email = "230499@buas.nl"},
    {name = "Noah Ivanisevic", email = "235738@buas.nl"},
    {name = "Kosta Ljubisavljevic", email = "233101@buas.nl"},
    {name = "Ricardo de Sousa", email = "235038@buas.nl"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11, <3.12"

[tool.poetry]
name = "emotion-clf-pipeline"
version = "0.1.0"
description = "This project aims to develop an NLP pipeline that processes video or audio, transcribes it, and classifies the emotion. The pipeline will be deployed on Azure using MLOps principles to enable automated workflows, cloud deployment, and robust monitoring."
authors = [
    "Soheil Mohammadpour <231754@buas.nl>",
    "Erfan Salour <230499@buas.nl>",
    "Noah Ivanisevic <235738@buas.nl>",
    "Kosta Ljubisavljevic <233101@buas.nl>",
    "Ricardo de Sousa <235038@buas.nl>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
torch = "*"
torchvision = "*"
torchaudio = "*"
transformers = "^4.51.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
nltk = "^3.9.1"
seaborn = "^0.13.2"
assemblyai = "^0.40.2"
openpyxl = "^3.1.5"
sentence-transformers = "^4.1.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
textblob = "^0.19.0"
pytubefix = "^8.13.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"
protobuf = "^6.31.0"
sentencepiece = "^0.2.0"
tabulate = "^0.9.0"
termcolor = "^3.1.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"
python-dotenv = "^1.0.0"
azure-ai-ml = "^1.27.1"
mlflow = "^2.22.0"
azure-identity = "^1.23.0"
azure-storage-blob = "^12.25.1"
psutil = "^5.9.0"
ffmpeg-python = "^0.2.0"
pytest-cov = "^6.2.1"
yt-dlp = "^2025.6.9"
monitoring = "^0.9.12"
prometheus-client = "^0.22.1"

[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
importlib-metadata = "^8.2.0"
pre-commit = "^4.2.0"
pytest-cov = "^6.0.0"
safety = "^3.0.0"
bandit = "^1.7.10"
pytest-html = "^4.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"
